# jp-utils

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
addon/: README.md  build.py  pyproject.toml
addon/src/jp_utils/: __init__.py  client.py  config.json  config.md  config.py  entry.py  generation.py  manifest.json  sequencing.py
addon/tests/: test_client.py  test_config.py  test_generation.py  test_ops.py  test_ops_clear_formatting.py  test_ops_frequency.py  test_ops_generate.py  test_ops_highlight.py  test_ops_int_sort.py  test_ops_media.py  test_ops_notes.py  test_ops_nplus1.py  test_ops_pitch.py  test_ops_sentence_furigana.py  test_ops_set_field.py  test_ops_spacing.py  test_ops_sync_status.py  test_ops_translate.py  test_ops_word_audio.py  test_ops_word_definition.py  test_ops_word_furigana.py  test_ops_word_reading.py  test_package.py  test_sequencing.py
backend/: README.md  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  errors.py  main.py
backend/app/api/: health.py
backend/app/cache/: __init__.py  tokenization.py
backend/app/dicts/: __init__.py  cache.py  (+3 more)
backend/tests/: conftest.py  test_audio.py  test_auth.py  test_convert.py  test_dicts.py  test_errors.py  test_frequency.py  test_furigana.py  test_health.py  test_lifespan.py  test_locate.py  test_meaning.py  test_mining_api.py  test_mining_ordering.py  test_normalize.py  test_pitch.py  test_spacing.py  test_text.py  test_tokenization_cache.py  test_tokenizer.py  test_translation_queue.py  test_translations_api.py  test_vocab_api.py  test_vocab_store.py  test_words.py
(+66 files in other folders)
