[project]
name = "jp-utils-addon"
version = "0.1.0"
description = "jp-utils Anki add-on: thin, stdlib-only client for the jp-utils backend"
requires-python = ">=3.13"
# Runtime is stdlib-only (Anki's bundled Python cannot pip-install). `shared/` is
# vendored into the .ankiaddon zip at build time, not declared as a dependency.
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jp_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
