[project]
name = "backend"
version = "0.1.0"
description = "jp-utils backend: stateless text service + stateful vocab store"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "sudachipy>=0.6.8",
    "sudachidict-core>=20240716",
    "shared",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.28",
    "ruff>=0.9",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
